--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -24,6 +24,7 @@ if (flutterVersionName == null) {
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
+// Or using Kotlin DSL:
 
 android {
     namespace "com.korde.koploks.valuewallet"
@@ -62,6 +63,23 @@ android {
         }
     }
 }
+
+configurations {
+    debugImplementation {
+        exclude group: 'io.objectbox', module: 'objectbox-android'
+    }
+}
+
+dependencies {
+    // Add objectbox-android-objectbrowser only for debug builds.
+    // Replace <version> with the included objectbox-android version,
+    // e.g. check https://github.com/objectbox/objectbox-dart/releases
+    // Warning: when ObjectBox for Dart updates check if <version>
+    // needs to be updated.
+    debugImplementation("io.objectbox:objectbox-android-objectbrowser:4.0.1")
+    releaseImplementation("io.objectbox:objectbox-android:4.0.1")
+}
+
 
 flutter {
     source '../..'
