--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,7 +55,7 @@ dependencies:
   flutter_snake_navigationbar: ^0.6.1
   shimmer:
   cached_network_image: 3.3.0
-  carousel_slider: ^4.2.1
+  carousel_slider: ^5.0.0
   smooth_page_indicator: ^1.1.0
   flutter_easyloading: ^3.0.5
   objectbox: ^4.0.1
@@ -76,7 +76,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
-  build_runner: ^2.4.9
+  build_runner: 2.4.10
   objectbox_generator: 4.0.1
 
 # For information on the generic Dart part of this file, see the
