--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -99,6 +99,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/images/
     - assets/navbar_icons/
     - assets/status_image/
     - assets/dev/
