--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,8 +31,9 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_localizations:
-      sdk: flutter
+    sdk: flutter
   intl: any
+  #flutter_gen: any
   stretchy_header: "^2.0.0"
 
 
